# ChatDND

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
api/: .gitignore  Dockerfile  README.md  pyproject.toml
api/api/: main.py  models.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.ts  socket.js
frontend/src/components/: CharacterSheet.vue  ChatBox.vue  ConnectionManager.vue  MyForm.vue
frontend/src/router/: index.ts
frontend/src/views/: ChatBox.vue
sql-scripts/: 0001_chat_log.sql
