[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["David Illing <dilling123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
langchain = "^0.0.148"
websockets = "^11.0.2"
openai = "^0.27.4"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
